--- a/src/Properties/Settings.settings
+++ b/src/Properties/Settings.settings
@@ -5,5 +5,8 @@
     <Setting Name="AppName" Type="System.String" Scope="Application">
       <Value Profile="(Default)"> ZDY ' VIDEO</Value>
     </Setting>
+    <Setting Name="AppName2" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">DY ' VIDEO</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
