--- a/src/Zhai.VideoView.csproj
+++ b/src/Zhai.VideoView.csproj
@@ -28,16 +28,16 @@
 
 
   <ItemGroup>
-    <PackageReference Include="LibVLCSharp" Version="3.6.5" />
-    <PackageReference Include="LibVLCSharp.WPF" Version="3.6.5" />
-    <PackageReference Include="Microsoft-WindowsAPICodePack-Shell" Version="1.1.4" />
-    <PackageReference Include="VideoLAN.LibVLC.Windows" Version="3.0.16" />
+    <PackageReference Include="LibVLCSharp" Version="3.6.7" />
+    <PackageReference Include="LibVLCSharp.WPF" Version="3.6.7" />
+    <PackageReference Include="VideoLAN.LibVLC.Windows" Version="3.0.18" />
+    <PackageReference Include="Zhai.Famil" Version="1.1.7" />
   </ItemGroup>
 
 
   <ItemGroup>
 	<EmbeddedResource Include="favicon.ico">
-	  <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	</EmbeddedResource>
   </ItemGroup>
 
