--- a/src/Zhai.VideoView.csproj
+++ b/src/Zhai.VideoView.csproj
@@ -24,12 +24,15 @@
 
   <ItemGroup>
     <None Remove="favicon.ico" />
+    <None Remove="Resources\image-failed.png" />
+    <None Remove="Resources\image-loading.png" />
   </ItemGroup>
 
 
   <ItemGroup>
     <PackageReference Include="LibVLCSharp" Version="3.6.7" />
     <PackageReference Include="LibVLCSharp.WPF" Version="3.6.7" />
+    <PackageReference Include="Microsoft-WindowsAPICodePack-Shell" Version="1.1.4" />
     <PackageReference Include="VideoLAN.LibVLC.Windows" Version="3.0.18" />
     <PackageReference Include="Zhai.Famil" Version="1.2.11" />
   </ItemGroup>
@@ -39,6 +42,12 @@
 	<EmbeddedResource Include="favicon.ico">
 	  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	</EmbeddedResource>
+  </ItemGroup>
+
+
+  <ItemGroup>
+    <Resource Include="Resources\image-failed.png" />
+    <Resource Include="Resources\image-loading.png" />
   </ItemGroup>
 
 
