--- a/src/App.config
+++ b/src/App.config
@@ -4,6 +4,9 @@
         <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
             <section name="Zhai.VideoView.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
         </sectionGroup>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="Zhai.VideoView.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
     </configSections>
     <applicationSettings>
         <Zhai.VideoView.Properties.Settings>
@@ -12,4 +15,17 @@
             </setting>
         </Zhai.VideoView.Properties.Settings>
     </applicationSettings>
+    <userSettings>
+        <Zhai.VideoView.Properties.Settings>
+            <setting name="IsStartWindowMaximized" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="IsWindowTransparency" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="Volume" serializeAs="String">
+                <value>75</value>
+            </setting>
+        </Zhai.VideoView.Properties.Settings>
+    </userSettings>
 </configuration>
