--- a/src/Properties/Settings.settings
+++ b/src/Properties/Settings.settings
@@ -5,5 +5,14 @@
     <Setting Name="AppName" Type="System.String" Scope="Application">
       <Value Profile="(Default)"> ZDY ' VIDEO</Value>
     </Setting>
+    <Setting Name="IsStartWindowMaximized" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="IsWindowTransparency" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="Volume" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">75</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
