--- a/src/Zhai.VideoView.csproj
+++ b/src/Zhai.VideoView.csproj
@@ -1,70 +1,64 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <OutputType>WinExe</OutputType>
-    <TargetFramework>net6.0-windows</TargetFramework>
-    <Nullable>disable</Nullable>
-    <UseWPF>true</UseWPF>
-    <ApplicationIcon>favicon.ico</ApplicationIcon>
-	<AssemblyTitle>ZHAI VIDEO VIEW</AssemblyTitle>
-  </PropertyGroup>
+	<PropertyGroup>
+		<OutputType>WinExe</OutputType>
+		<TargetFramework>net6.0-windows</TargetFramework>
+		<Nullable>disable</Nullable>
+		<UseWPF>true</UseWPF>
+		<ApplicationIcon>favicon2.ico</ApplicationIcon>
+		<AssemblyTitle>ZHAI VIDEO VIEW</AssemblyTitle>
+	</PropertyGroup>
 
-  <PropertyGroup>
-  	<Title>ZHAI VIDEO VIEW</Title>
-  	<Version>1.0.0.0</Version>
-  	<Authors>ZDY</Authors>
-  	<Copyright>Copyright © 2022 ZDY 保留所有权利。</Copyright>
-  	<Description>诞生于我（ZDY）的个人兴趣，我会在有限的时间里维护这个软件。如果在使用的过程中发现什么BUG，欢迎发送描述信息和图片到我的邮箱，也可以在我的GitHub上留言，我会尽力改进软件...</Description>
-  	<SignAssembly>True</SignAssembly>
-  	<Product>ZHAI VIDEO VIEW</Product>
-  	<PackageReadmeFile>README.md</PackageReadmeFile>
-  	<PackageIcon>favicon.png</PackageIcon>
-  	<AssemblyOriginatorKeyFile>Zhai.VideoView.snk</AssemblyOriginatorKeyFile>
-  </PropertyGroup>
+	<PropertyGroup>
+		<Title>ZHAI VIDEO VIEW</Title>
+		<Version>1.2.2.18</Version>
+		<Authors>ZDY</Authors>
+		<Copyright>Copyright © 2022 ZDY 保留所有权利。</Copyright>
+		<Description>诞生于我（ZDY）的个人兴趣，我会在有限的时间里维护这个软件。如果在使用的过程中发现什么BUG，欢迎发送描述信息和图片到我的邮箱，也可以在我的GitHub上留言，我会尽力改进软件...</Description>
+		<SignAssembly>True</SignAssembly>
+		<Product>ZHAI VIDEO VIEW</Product>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
+		<PackageIcon>favicon2.ico</PackageIcon>
+		<AssemblyOriginatorKeyFile>Zhai.VideoView.snk</AssemblyOriginatorKeyFile>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <None Remove="favicon.ico" />
-    <None Remove="Resources\image-failed.png" />
-    <None Remove="Resources\image-loading.png" />
-  </ItemGroup>
-
-
-  <ItemGroup>
-    <PackageReference Include="LibVLCSharp" Version="3.6.7" />
-    <PackageReference Include="LibVLCSharp.WPF" Version="3.6.7" />
-    <PackageReference Include="Microsoft-WindowsAPICodePack-Shell" Version="1.1.4" />
-    <PackageReference Include="VideoLAN.LibVLC.Windows" Version="3.0.18" />
-    <PackageReference Include="Zhai.Famil" Version="1.2.11" />
-  </ItemGroup>
+	<ItemGroup>
+		<None Remove="favicon2.ico" />
+		<None Remove="Resources\image-failed.png" />
+		<None Remove="Resources\image-loading.png" />
+	</ItemGroup>
 
 
-  <ItemGroup>
-	<EmbeddedResource Include="favicon.ico">
-	  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-	</EmbeddedResource>
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="LibVLCSharp" Version="3.6.7" />
+		<PackageReference Include="LibVLCSharp.WPF" Version="3.6.7" />
+		<PackageReference Include="Microsoft-WindowsAPICodePack-Shell" Version="1.1.4" />
+		<PackageReference Include="VideoLAN.LibVLC.Windows" Version="3.0.18" />
+		<PackageReference Include="Zhai.Famil" Version="1.2.11" />
+	</ItemGroup>
 
 
-  <ItemGroup>
-    <Resource Include="Resources\image-failed.png" />
-    <Resource Include="Resources\image-loading.png" />
-  </ItemGroup>
+	<ItemGroup>
+		<Resource Include="favicon2.ico" />
+		<Resource Include="Resources\image-failed.png" />
+		<Resource Include="Resources\image-loading.png" />
+	</ItemGroup>
 
 
-  <ItemGroup>
-    <Compile Update="Properties\Settings.Designer.cs">
-      <DesignTimeSharedInput>True</DesignTimeSharedInput>
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Settings.settings</DependentUpon>
-    </Compile>
-  </ItemGroup>
+	<ItemGroup>
+		<Compile Update="Properties\Settings.Designer.cs">
+			<DesignTimeSharedInput>True</DesignTimeSharedInput>
+			<AutoGen>True</AutoGen>
+			<DependentUpon>Settings.settings</DependentUpon>
+		</Compile>
+	</ItemGroup>
 
 
-  <ItemGroup>
-    <None Update="Properties\Settings.settings">
-      <Generator>SettingsSingleFileGenerator</Generator>
-      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
-    </None>
-  </ItemGroup>
+	<ItemGroup>
+		<None Update="Properties\Settings.settings">
+			<Generator>SettingsSingleFileGenerator</Generator>
+			<LastGenOutput>Settings.Designer.cs</LastGenOutput>
+		</None>
+	</ItemGroup>
 
 </Project>
