--- a/src/App.config
+++ b/src/App.config
@@ -11,7 +11,7 @@
     <applicationSettings>
         <Zhai.VideoView.Properties.Settings>
             <setting name="AppName" serializeAs="String">
-                <value> ZDY ' VIDEO</value>
+                <value>ZDY ' VIDEO</value>
             </setting>
         </Zhai.VideoView.Properties.Settings>
     </applicationSettings>
@@ -20,8 +20,8 @@
             <setting name="IsStartWindowMaximized" serializeAs="String">
                 <value>False</value>
             </setting>
-            <setting name="IsWindowTransparency" serializeAs="String">
-                <value>False</value>
+            <setting name="IsWindowDarked" serializeAs="String">
+                <value>True</value>
             </setting>
             <setting name="Volume" serializeAs="String">
                 <value>75</value>
