--- a/src/Properties/Settings.settings
+++ b/src/Properties/Settings.settings
@@ -3,13 +3,13 @@
   <Profiles />
   <Settings>
     <Setting Name="AppName" Type="System.String" Scope="Application">
-      <Value Profile="(Default)"> ZDY ' VIDEO</Value>
+      <Value Profile="(Default)">ZDY ' VIDEO</Value>
     </Setting>
     <Setting Name="IsStartWindowMaximized" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
-    <Setting Name="IsWindowTransparency" Type="System.Boolean" Scope="User">
-      <Value Profile="(Default)">False</Value>
+    <Setting Name="IsWindowDarked" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="Volume" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">75</Value>
