--- a/src/App.config
+++ b/src/App.config
@@ -20,11 +20,11 @@
             <setting name="IsStartWindowMaximized" serializeAs="String">
                 <value>False</value>
             </setting>
-            <setting name="IsWindowDarked" serializeAs="String">
-                <value>True</value>
-            </setting>
             <setting name="Volume" serializeAs="String">
                 <value>75</value>
+            </setting>
+            <setting name="VideoHistory" serializeAs="String">
+                <value />
             </setting>
         </Zhai.VideoView.Properties.Settings>
     </userSettings>
